<resources>
    <string name="app_name">MorScout</string>

    <!-- Login -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">Log In</string>
    <string name="login_separator">  - OR - </string>
    <string name="login_registerButton">Register</string>

    <!-- Register -->
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_passwordConfirm">Confirm Password</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Phone</string>
    <string name="register_registerButton">Register</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_1">Home</string>
    <string name="nav_item_2">All Matches</string>
    <string name="nav_item_3">Team List</string>
    <string name="nav_item_4">Settings</string>
    <string name="nav_item_5">Profile</string>
    <string name="nav_item_6">Log Out</string>

    <!-- Home -->
    <string name="home_title">MorScout</string>

    <!-- Settings -->
    <string name="settings_chooseRegional">Choose Current Regional</string>
    <string name="settings_year">Choose Year</string>
    <string name="settings_setRegional">Set Regional</string>
</resources>
