<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <include layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_firstName"
            android:id="@+id/register_firstName"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_lastName"
            android:id="@+id/register_lastName"
            android:inputType="textCapWords"
            android:singleLine="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:id="@+id/register_username"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:id="@+id/register_password"
            android:singleLine="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/register_passwordConfirm"
            android:id="@+id/register_passwordConfirm"
            android:singleLine="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:id="@+id/register_email"
            android:singleLine="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone"
            android:inputType="phone"
            android:id="@+id/register_phone"
            android:singleLine="true" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register_registerButton"
            android:id="@+id/login_loginbutton"
            android:onClick="register"/>

    </LinearLayout>

</RelativeLayout>