<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_chooseRegional"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/settings_year"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/settings_year"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/colorAccent" />

        <Spinner
            android:id="@+id/settings_regionalsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/settings_setRegional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/settings_setRegional"
            android:textColor="#000000"/>

    </LinearLayout>

</RelativeLayout>